Wed Apr 10 19:53:01 2002  Ossama Othman  <ossama@uci.edu>

	* ace/Argv_Type_Converter.cpp:

	  Include "ace/OS_Errno.h" to pull in ENOMEM definition.

	  (align_char_with_wchar):

	  Fixed remaining ACE_OS::strcmp() to be ACE_OS_String::strcmp().

Wed Apr 10 19:37:58 2002  Ossama Othman  <ossama@uci.edu>

	* apps/gperf/src/Bool_Array.h:
	* apps/gperf/src/Iterator.h:
	* apps/gperf/src/List_Node.h:

	  No need to include "ace/OS.h".  "ace/config-all.h" is enough.

Wed Apr 10 19:25:39 2002  Ossama Othman  <ossama@uci.edu>

	* apps/Gateway/Gateway/Config_Files.cpp (read_entry): 

	  Use "unsigned short" instead of the "u_short" typedef to avoid
	  including "ace/OS.h".

	* apps/Gateway/Gateway/Gateway.h:
	* apps/Gateway/Gateway/Event_Channel.h:
	* apps/Gateway/Gateway/Options.h:
	* apps/Gateway/Peer/Options.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_Broadcast.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_L_CODgram.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_L_Dgram.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_L_FIFO.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_L_Pipe.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_L_Stream.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_R_Dgram.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_R_Stream.h:
	* examples/Service_Configurator/IPC-tests/server/Handle_Timeout.h:
	* examples/Service_Configurator/Misc/Timer_Service.h:
	* netsvcs/clients/Naming/Client/Client_Test.h:
	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore.h:
	* tests/DLL_Test_Impl.cpp:

	  Include "ace/svc_export.h" to pull in ACE_Svc_Export macro.

Wed Apr 10 18:57:11 2002  Ossama Othman  <ossama@uci.edu>

	* netsvcs/lib/Client_Logging_Handler.h:
	* netsvcs/lib/Name_Handler.h:
	* netsvcs/lib/Server_Logging_Handler.h:
	* netsvcs/lib/TS_Clerk_Handler.h:
	* netsvcs/lib/TS_Server_Handler.h:

	  Include "ace/svc_export.h" to pull in ACE_Svc_Export macro.
